Bug 1329845 - Part 2: Report missing properties on the self-hosting global during runtime initialization. r=shu

MozReview-Commit-ID: BEN3KmNnYie